TAG: lib_py_littriage-6-0-16-2
DATE: 08/21/2020
STAFF: jak
add test/getTextFromPdf.py

TAG: lib_py_littriage-6-0-16-1
DATE: 08/21/2020
STAFF: lec
TR13204/Infrastructure Release

TAG:
DATE: 08/14/2020
STAFF: jak
Merge master (including tr13312) into tr13204 - python 3

TAG: lib_py_littriage-6-0-15-3
DATE: 03/10/2020
STAFF: lec
PdfParser.py
TR13261/LTLO: Zenodo DOI

TAG: lib_py_littriage-6-0-15-2
DATE: 03/10/2020
STAFF: lec
PdfParser.py
TR13279/JCI & REP (Reproduction)

TAG: lib_py_littriage-6-0-15-1
DATE: 02/05/2020
STAFF: lec
PdfParser.py
TR13224/ltlo: PNAS doi extraction issue
TR13208/ltlo: blood journal doi extraction is truncated

TAG: lib_py_littriage-6-0-14-2
DATE: 11/21/2019
STAFF: jak 
TR13199/PLoS DOI extraction bug 

TAG: lib_py_littriage-6-0-14-1
DATE: 04/09/2019
STAFF: lec 
TR12963/teleuse-to-mgd_java_api

TAG: lib_py_littriage-6-0-11-14
DATE: 03/11/2019
STAFF: jak
CHANGES: TR 12763
1) add extractedTextSplitter.py
2) add extTextSplitter subdir w/ scripts for analyzing extractedText reference
splitting

TAG: lib_py_littriage-6-0-11-13
DATE: 03/23/2018
STAFF: lec
CHANGES: TR12836/EUtils issue
1) add "[lid]" to EUtils ID_CONVERTER_URL : PubMedAgent.py
2) add '10.1126/scisignal' : PdfParser.py

TAG: lib_py_littriage-6-0-11-11
DATE: 03/01/2018
STAFF: sc
CHANGES:
1) TR12786 PubMedAgent add eutils api_key

TAG: lib_py_littriage-6-0-11-10
DATE: 02/27/2018
STAFF: lec
CHANGES:
1) TR12787/add JOURNAL_DOI_RE check for J Dent Res and other
10.1177 journals

TAG: lib_py_littriage-6-0-11-9
DATE: 12/27/2017
STAFF: lec
CHANGES:
1) TR12747 - add 'PT'/publicationType to PubMedAgent.py

TAG: lib_py_littriage-6-0-11-8
DATE: 12/18/2017
STAFF: sc
CHANGES:
1) TR12727 - parsing PNAS doiIDs with no '/'
2) TR12739 - differentiating btwn  10.1126/science
    and  10.1126/scitranslmed

TAG: lib_py_littriage-6-0-11-7
TAG: lib_py_littriage-6-0-11-6
DATE: 12/11/2017
STAFF: lec
CHANGES: TR12705 LTLO: refresh info from NLM
1) PubMedAgent.py : AID check; find() needs to check find() > 0
