@@ -1,3 +1,8 @@
+TAG: lib_py_littriage-6-0-16-3
+DATE: 08/24/2020
+STAFF: jak
+improve stderr capture from LITPARSER
+
 TAG: lib_py_littriage-6-0-16-2
 DATE: 08/21/2020
 STAFF: jak
